# transkriptor

./: .gitignore  README.md  ljudanteckning.example.ini  pyproject.toml
src/ljudanteckning/: chunking.py  cli.py  config.py  export.py  logging_setup.py  media.py  probe.py  telemetry.py  transcribe.py  utils.py
src/transkriptor/: chunking.py  cli.py  export.py  transcribe.py
tests/: test_config.py  test_discovery.py  test_imports.py
